<resources>
    <string name="calibration_progress">Calibration: %d%%</string>
    <string name="segmentation">Segmentation</string>
    <string name="lane_detection">Lane Detection</string>
    <string name="object_mapping">Object Mapping</string>
    <string name="safety_mode">Safety Mode</string>
    <string name="signs_detection">Signs Detection</string>
    <string name="object_detection">Object Detection</string>
    <string name="ar_navigation">AR Routing</string>
    <string name="driver_score">Driver Score</string>
    <string name="go">Go</string>
    <string name="tap_to_select_destination">Tap on the map to select a destination</string>
    <string name="can_not_calculate_new_route">Cannot calculate new route</string>
    <string name="choose_session">Choose Session</string>
    <string name="start_ar_session">Start AR Session</string>
    <string name="vision_not_supported_title">Device is not supported</string>
    <string name="vision_not_supported_message">Vision SDK does not support this device yet, check more details at &lt;a href=\"https://docs.mapbox.com/android/vision/overview/#requirements\">docs.mapbox.com&lt;/a></string>
    <string name="apply_custom_fps">Apply custom fps</string>
    <string name="fps_input">enter custom fps…</string>
    <string name="camera_fps">Camera FPS: %.0f</string>
    <string name="detections_filter">Detections filter:</string>
    <string name="detections_bg">Background</string>
    <string name="detections_warning">Warning</string>
    <string name="detections_danger">Danger</string>

</resources>
