<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/session_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:text="session time"/>

    <TextView
        android:id="@+id/calibration_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:text="calibration progress"/>

    <TextView
        android:id="@+id/merge_model_fps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:text="merge model fps"/>

    <TextView
        android:id="@+id/core_update_fps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:text="core update fps"/>

    <TextView
        android:id="@+id/camera_fps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:text="camera fps"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_70_transparent"/>

    <EditText
        android:id="@+id/custom_fps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:hint="@string/fps_input"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/apply_custom_fps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/apply_custom_fps"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_70_transparent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="Detections filter : "/>

    <Switch
        android:id="@+id/detections_switch_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:checked="true"
        android:text="@string/detections_bg"/>

    <Switch
        android:id="@+id/detections_switch_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:checked="true"
        android:text="@string/detections_warning"/>

    <Switch
        android:id="@+id/detections_switch_critical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:checked="true"
        android:text="@string/detections_danger"/>

</merge>
